// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolCard Snapshots renders default state correctly 1`] = `
<TouchableOpacity
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#f0f0f0",
      "borderRadius": 12,
      "borderWidth": 1,
      "elevation": 8,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "padding": 20,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 6,
    }
  }
  testID="pool-card-pool-456"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#1a1a1a",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Stellar Growth Pool
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#f0fdf4",
          "borderRadius": 6,
          "color": "#22c55e",
          "fontSize": 14,
          "fontWeight": "600",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      12.5%
       APY
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 16,
      }
    }
  >
    A diversified pool focused on high-growth Stellar ecosystem projects with sustainable returns.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#888",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Total Value
      </Text>
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        $1,234,567
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#888",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Participants
      </Text>
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        128
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`PoolCard Snapshots renders loading state correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#f0f0f0",
        "borderRadius": 12,
        "borderWidth": 1,
        "elevation": 8,
        "marginHorizontal": 16,
        "marginVertical": 8,
        "padding": 20,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 6,
      },
      {
        "backgroundColor": "#f8f8f8",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "height": 18,
          "width": "60%",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "height": 14,
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#e0e0e0",
            "borderRadius": 4,
            "marginBottom": 12,
          },
          {
            "height": 16,
            "width": "80%",
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "backgroundColor": "#e0e0e0",
            "borderRadius": 4,
            "marginBottom": 12,
          },
          {
            "height": 16,
            "width": "80%",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`PoolCard Snapshots renders with long description correctly 1`] = `
<TouchableOpacity
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#f0f0f0",
      "borderRadius": 12,
      "borderWidth": 1,
      "elevation": 8,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "padding": 20,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 6,
    }
  }
  testID="pool-card-pool-456"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#1a1a1a",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Stellar Growth Pool
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#f0fdf4",
          "borderRadius": 6,
          "color": "#22c55e",
          "fontSize": 14,
          "fontWeight": "600",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      12.5%
       APY
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 16,
      }
    }
  >
    This is a comprehensive investment pool that focuses on emerging technologies within the Stellar ecosystem, including DeFi protocols, NFT marketplaces, and cross-border payment solutions. The pool is managed by experienced professionals with a proven track record.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#888",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Total Value
      </Text>
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        $1,234,567
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#888",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Participants
      </Text>
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        128
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`PoolCard Snapshots renders with onPress handler correctly 1`] = `
<TouchableOpacity
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#f0f0f0",
      "borderRadius": 12,
      "borderWidth": 1,
      "elevation": 8,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "padding": 20,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 6,
    }
  }
  testID="pool-card-pool-456"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#1a1a1a",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Stellar Growth Pool
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#f0fdf4",
          "borderRadius": 6,
          "color": "#22c55e",
          "fontSize": 14,
          "fontWeight": "600",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      12.5%
       APY
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 16,
      }
    }
  >
    A diversified pool focused on high-growth Stellar ecosystem projects with sustainable returns.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#888",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Total Value
      </Text>
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        $1,234,567
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#888",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Participants
      </Text>
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        128
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`PoolCard Snapshots renders with zero participants correctly 1`] = `
<TouchableOpacity
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#f0f0f0",
      "borderRadius": 12,
      "borderWidth": 1,
      "elevation": 8,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "padding": 20,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 6,
    }
  }
  testID="pool-card-pool-456"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#1a1a1a",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Stellar Growth Pool
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#f0fdf4",
          "borderRadius": 6,
          "color": "#22c55e",
          "fontSize": 14,
          "fontWeight": "600",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      12.5%
       APY
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 16,
      }
    }
  >
    A diversified pool focused on high-growth Stellar ecosystem projects with sustainable returns.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#888",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Total Value
      </Text>
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        $1,234,567
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#888",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Participants
      </Text>
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        0
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`PoolCard Snapshots renders without APY correctly 1`] = `
<TouchableOpacity
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#f0f0f0",
      "borderRadius": 12,
      "borderWidth": 1,
      "elevation": 8,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "padding": 20,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 6,
    }
  }
  testID="pool-card-pool-456"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#1a1a1a",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Stellar Growth Pool
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#666",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 16,
      }
    }
  >
    A diversified pool focused on high-growth Stellar ecosystem projects with sustainable returns.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#888",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Total Value
      </Text>
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        $1,234,567
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#888",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Participants
      </Text>
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        128
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;
